samples/errors/bad-indent.fls
 func m(x, y, z)
     write(x + y)
   write(y + z)

  if false
    return

func nothing()
        return
